Archive2/0d/dd0bc7811779a1/output
main.cpp: In function 'int main()':
main.cpp:69:19: error: unable to find numeric literal operator 'operator""b1234_baseChange'
     const ULL v = 2b1234_baseChange;
                   ^
main.cpp:69:19: note: use -std=gnu++11 or -fext-numeric-literals to enable more built-in suffixes
